Create background for speed slider.

--- a/cgl.css
+++ b/cgl.css
@@ -25,11 +25,12 @@ body, html {
 .cgl_controls .cgl_slider {
 	-webkit-appearance: none;
 	appearance: none;
-	background-color: #333333;
-	height: 50px;
+	background-color: #777777;
+	height: 8px;
 	padding: 0;
-	margin: 0;
+	margin: 21px 0px 21px 0px;
 	border: none;
+	border-radius: 8px;
 }
 .cgl_slider::-webkit-slider-thumb {
 	-webkit-appearance: none;
