Revert "Create background for speed slider."
This reverts commit 5683ad31d2224e5f29b8e3fe5de905563bae22ca.

Slider background only worked in FireFox.

--- a/cgl.css
+++ b/cgl.css
@@ -25,12 +25,11 @@ body, html {
 .cgl_controls .cgl_slider {
 	-webkit-appearance: none;
 	appearance: none;
-	background-color: #777777;
-	height: 8px;
+	background-color: #333333;
+	height: 50px;
 	padding: 0;
-	margin: 21px 0px 21px 0px;
+	margin: 0;
 	border: none;
-	border-radius: 8px;
 }
 .cgl_slider::-webkit-slider-thumb {
 	-webkit-appearance: none;
